ProgrammingLanguages-PSEInt/TranslatorToC/gen/GrammarParser.java
// Generated from C:/Users/julia/Documents/LL3/grammar\Grammar.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FINSI=1, CARACTER=2, REAL=3, ENTERO=4, NUMERICO=5, NUMERO=6, LOGICO=7, 
		TEXTO=8, CADENA=9, VERDADERO=10, FALSO=11, Y=12, O=13, NO=14, MOD=15, 
		PARA=16, HASTA=17, CON=18, CASO=19, PASO=20, DEFINIR=21, HACER=22, COMO=23, 
		ESCRIBIR=24, LEER=25, ENTONCES=26, DIMENSION=27, REPETIR=28, MIENTRAS=29, 
		ALGORITMO=30, PROCESO=31, SI=32, SINO=33, SEGUN=34, DE=35, OTRO=36, MODO=37, 
		SUBPROCESO=38, SUBALGORITMO=39, FUNCION=40, FINPROCESO=41, FINALGORITMO=42, 
		FINMIENTRAS=43, FINSEGUN=44, FINPARA=45, FINSUBPROCESO=46, FINSUBALGORITMO=47, 
		FINFUNCION=48, QUE=49, LIMPIAR=50, BORRAR=51, PANTALLA=52, ESPERAR=53, 
		TECLA=54, SEGUNDOS=55, MILISEGUNDOS=56, TOKEN_REAL=57, TOKEN_ENTERO=58, 
		TOKEN_CADENA=59, TOKEN_ID=60, TOKEN_NEG=61, TOKEN_IGUAL=62, TOKEN_MENOR=63, 
		TOKEN_ASIG=64, TOKEN_DIF=65, TOKEN_MENOR_IGUAL=66, TOKEN_MAYOR=67, TOKEN_MAYOR_IGUAL=68, 
		TOKEN_DIV=69, TOKEN_PAR_IZQ=70, TOKEN_PAR_DER=71, TOKEN_MAS=72, TOKEN_MENOS=73, 
		TOKEN_Y=74, TOKEN_O=75, TOKEN_COR_DER=76, TOKEN_COR_IZQ=77, TOKEN_MUL=78, 
		TOKEN_MOD=79, TOKEN_POT=80, TOKEN_PYC=81, TOKEN_COMA=82, TOKEN_DOSP=83, 
		TOKEN_ESPACIO=84, TOKEN_LINIA_COMENTARIO=85, TOKEN_COMENTARIO=86;
	public static final int
		RULE_programa = 0, RULE_subproceso = 1, RULE_inicio_sub_proceso = 2, RULE_fin_sub_proceso = 3, 
		RULE_firma = 4, RULE_argumentos = 5, RULE_proceso = 6, RULE_inicio_proceso = 7, 
		RULE_fin_proceso = 8, RULE_comando = 9, RULE_declaracion = 10, RULE_tipo = 11, 
		RULE_asignacion = 12, RULE_asignacion1 = 13, RULE_llamada_subproceso = 14, 
		RULE_llamada_dimension = 15, RULE_dimension = 16, RULE_condicional_si = 17, 
		RULE_bloque_si = 18, RULE_bloque_sino = 19, RULE_ciclo_para = 20, RULE_ciclo_para1 = 21, 
		RULE_bloque_para = 22, RULE_ciclo_mientras = 23, RULE_bloque_mientras = 24, 
		RULE_ciclo_repetir = 25, RULE_bloque_repetir = 26, RULE_segun = 27, RULE_bloque_segun = 28, 
		RULE_finsegun = 29, RULE_comando_especial = 30, RULE_escribir = 31, RULE_esperar = 32, 
		RULE_esperar1 = 33, RULE_medida = 34, RULE_leer = 35, RULE_lista_leer_id = 36, 
		RULE_lista_leer_id1 = 37, RULE_expresion = 38, RULE_logOrExpr = 39, RULE_logOrExpr1 = 40, 
		RULE_logAndExpr = 41, RULE_logAndExpr1 = 42, RULE_equExpr = 43, RULE_equExpr1 = 44, 
		RULE_relExpr = 45, RULE_relExpr1 = 46, RULE_addExpr = 47, RULE_addExpr1 = 48, 
		RULE_mulExpr = 49, RULE_mulExpr1 = 50, RULE_expExpr = 51, RULE_expExpr1 = 52, 
		RULE_operEqu = 53, RULE_operRel = 54, RULE_operAdd = 55, RULE_operMul = 56, 
		RULE_operExp = 57, RULE_pr = 58, RULE_expresion_llamada = 59;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "subproceso", "inicio_sub_proceso", "fin_sub_proceso", "firma", 
			"argumentos", "proceso", "inicio_proceso", "fin_proceso", "comando", 
			"declaracion", "tipo", "asignacion", "asignacion1", "llamada_subproceso", 
			"llamada_dimension", "dimension", "condicional_si", "bloque_si", "bloque_sino", 
			"ciclo_para", "ciclo_para1", "bloque_para", "ciclo_mientras", "bloque_mientras", 
			"ciclo_repetir", "bloque_repetir", "segun", "bloque_segun", "finsegun", 
			"comando_especial", "escribir", "esperar", "esperar1", "medida", "leer", 
			"lista_leer_id", "lista_leer_id1", "expresion", "logOrExpr", "logOrExpr1", 
			"logAndExpr", "logAndExpr1", "equExpr", "equExpr1", "relExpr", "relExpr1", 
			"addExpr", "addExpr1", "mulExpr", "mulExpr1", "expExpr", "expExpr1", 
			"operEqu", "operRel", "operAdd", "operMul", "operExp", "pr", "expresion_llamada"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'~'", "'='", "'<'", "'<-'", "'<>'", "'<='", "'>'", "'>='", "'/'", 
			"'('", "')'", "'+'", "'-'", "'&'", "'|'", "']'", "'['", "'*'", "'%'", 
			"'^'", "';'", "','", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FINSI", "CARACTER", "REAL", "ENTERO", "NUMERICO", "NUMERO", "LOGICO", 
			"TEXTO", "CADENA", "VERDADERO", "FALSO", "Y", "O", "NO", "MOD", "PARA", 
			"HASTA", "CON", "CASO", "PASO", "DEFINIR", "HACER", "COMO", "ESCRIBIR", 
			"LEER", "ENTONCES", "DIMENSION", "REPETIR", "MIENTRAS", "ALGORITMO", 
			"PROCESO", "SI", "SINO", "SEGUN", "DE", "OTRO", "MODO", "SUBPROCESO", 
			"SUBALGORITMO", "FUNCION", "FINPROCESO", "FINALGORITMO", "FINMIENTRAS", 
			"FINSEGUN", "FINPARA", "FINSUBPROCESO", "FINSUBALGORITMO", "FINFUNCION", 
			"QUE", "LIMPIAR", "BORRAR", "PANTALLA", "ESPERAR", "TECLA", "SEGUNDOS", 
			"MILISEGUNDOS", "TOKEN_REAL", "TOKEN_ENTERO", "TOKEN_CADENA", "TOKEN_ID", 
			"TOKEN_NEG", "TOKEN_IGUAL", "TOKEN_MENOR", "TOKEN_ASIG", "TOKEN_DIF", 
			"TOKEN_MENOR_IGUAL", "TOKEN_MAYOR", "TOKEN_MAYOR_IGUAL", "TOKEN_DIV", 
			"TOKEN_PAR_IZQ", "TOKEN_PAR_DER", "TOKEN_MAS", "TOKEN_MENOS", "TOKEN_Y", 
			"TOKEN_O", "TOKEN_COR_DER", "TOKEN_COR_IZQ", "TOKEN_MUL", "TOKEN_MOD", 
			"TOKEN_POT", "TOKEN_PYC", "TOKEN_COMA", "TOKEN_DOSP", "TOKEN_ESPACIO", 
			"TOKEN_LINIA_COMENTARIO", "TOKEN_COMENTARIO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public ProcesoContext proceso() {
			return getRuleContext(ProcesoContext.class,0);
		}
		public List<SubprocesoContext> subproceso() {
			return getRuleContexts(SubprocesoContext.class);
		}
		public SubprocesoContext subproceso(int i) {
			return getRuleContext(SubprocesoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUBPROCESO) | (1L << SUBALGORITMO) | (1L << FUNCION))) != 0)) {
				{
				{
				setState(120);
				subproceso();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			proceso();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubprocesoContext extends ParserRuleContext {
		public Inicio_sub_procesoContext inicio_sub_proceso() {
			return getRuleContext(Inicio_sub_procesoContext.class,0);
		}
		public TerminalNode TOKEN_ID() { return getToken(GrammarParser.TOKEN_ID, 0); }
		public FirmaContext firma() {
			return getRuleContext(FirmaContext.class,0);
		}
		public Fin_sub_procesoContext fin_sub_proceso() {
			return getRuleContext(Fin_sub_procesoContext.class,0);
		}
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public SubprocesoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subproceso; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitSubproceso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubprocesoContext subproceso() throws RecognitionException {
		SubprocesoContext _localctx = new SubprocesoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_subproceso);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			inicio_sub_proceso();
			setState(129);
			match(TOKEN_ID);
			setState(130);
			firma();
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PARA) | (1L << DEFINIR) | (1L << ESCRIBIR) | (1L << LEER) | (1L << DIMENSION) | (1L << REPETIR) | (1L << MIENTRAS) | (1L << SI) | (1L << SEGUN) | (1L << LIMPIAR) | (1L << BORRAR) | (1L << ESPERAR) | (1L << TOKEN_ID))) != 0)) {
				{
				{
				setState(131);
				comando();
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(137);
			fin_sub_proceso();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Inicio_sub_procesoContext extends ParserRuleContext {
		public TerminalNode FUNCION() { return getToken(GrammarParser.FUNCION, 0); }
		public TerminalNode SUBPROCESO() { return getToken(GrammarParser.SUBPROCESO, 0); }
		public TerminalNode SUBALGORITMO() { return getToken(GrammarParser.SUBALGORITMO, 0); }
		public Inicio_sub_procesoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio_sub_proceso; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitInicio_sub_proceso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Inicio_sub_procesoContext inicio_sub_proceso() throws RecognitionException {
		Inicio_sub_procesoContext _localctx = new Inicio_sub_procesoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_inicio_sub_proceso);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUBPROCESO) | (1L << SUBALGORITMO) | (1L << FUNCION))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fin_sub_procesoContext extends ParserRuleContext {
		public TerminalNode FINFUNCION() { return getToken(GrammarParser.FINFUNCION, 0); }
		public TerminalNode FINSUBPROCESO() { return getToken(GrammarParser.FINSUBPROCESO, 0); }
		public TerminalNode FINSUBALGORITMO() { return getToken(GrammarParser.FINSUBALGORITMO, 0); }
		public Fin_sub_procesoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fin_sub_proceso; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitFin_sub_proceso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fin_sub_procesoContext fin_sub_proceso() throws RecognitionException {
		Fin_sub_procesoContext _localctx = new Fin_sub_procesoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fin_sub_proceso);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FINSUBPROCESO) | (1L << FINSUBALGORITMO) | (1L << FINFUNCION))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FirmaContext extends ParserRuleContext {
		public TerminalNode TOKEN_ASIG() { return getToken(GrammarParser.TOKEN_ASIG, 0); }
		public TerminalNode TOKEN_ID() { return getToken(GrammarParser.TOKEN_ID, 0); }
		public ArgumentosContext argumentos() {
			return getRuleContext(ArgumentosContext.class,0);
		}
		public FirmaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_firma; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitFirma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FirmaContext firma() throws RecognitionException {
		FirmaContext _localctx = new FirmaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_firma);
		int _la;
		try {
			setState(150);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TOKEN_ASIG:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				match(TOKEN_ASIG);
				setState(144);
				match(TOKEN_ID);
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TOKEN_PAR_IZQ) {
					{
					setState(145);
					argumentos();
					}
				}

				}
				break;
			case TOKEN_PAR_IZQ:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				argumentos();
				}
				break;
			case PARA:
			case DEFINIR:
			case ESCRIBIR:
			case LEER:
			case DIMENSION:
			case REPETIR:
			case MIENTRAS:
			case SI:
			case SEGUN:
			case FINSUBPROCESO:
			case FINSUBALGORITMO:
			case FINFUNCION:
			case LIMPIAR:
			case BORRAR:
			case ESPERAR:
			case TOKEN_ID:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentosContext extends ParserRuleContext {
		public TerminalNode TOKEN_PAR_IZQ() { return getToken(GrammarParser.TOKEN_PAR_IZQ, 0); }
		public TerminalNode TOKEN_PAR_DER() { return getToken(GrammarParser.TOKEN_PAR_DER, 0); }
		public List<TerminalNode> TOKEN_ID() { return getTokens(GrammarParser.TOKEN_ID); }
		public TerminalNode TOKEN_ID(int i) {
			return getToken(GrammarParser.TOKEN_ID, i);
		}
		public List<TerminalNode> TOKEN_COMA() { return getTokens(GrammarParser.TOKEN_COMA); }
		public TerminalNode TOKEN_COMA(int i) {
			return getToken(GrammarParser.TOKEN_COMA, i);
		}
		public ArgumentosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentos; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitArgumentos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentosContext argumentos() throws RecognitionException {
		ArgumentosContext _localctx = new ArgumentosContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_argumentos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(TOKEN_PAR_IZQ);
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TOKEN_ID) {
				{
				setState(153);
				match(TOKEN_ID);
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==TOKEN_COMA) {
					{
					{
					setState(154);
					match(TOKEN_COMA);
					setState(155);
					match(TOKEN_ID);
					}
					}
					setState(160);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(163);
			match(TOKEN_PAR_DER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcesoContext extends ParserRuleContext {
		public Inicio_procesoContext inicio_proceso() {
			return getRuleContext(Inicio_procesoContext.class,0);
		}
		public TerminalNode TOKEN_ID() { return getToken(GrammarParser.TOKEN_ID, 0); }
		public Fin_procesoContext fin_proceso() {
			return getRuleContext(Fin_procesoContext.class,0);
		}
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public ProcesoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proceso; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitProceso(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcesoContext proceso() throws RecognitionException {
		ProcesoContext _localctx = new ProcesoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_proceso);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			inicio_proceso();
			setState(166);
			match(TOKEN_ID);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PARA) | (1L << DEFINIR) | (1L << ESCRIBIR) | (1L << LEER) | (1L << DIMENSION) | (1L << REPETIR) | (1L << MIENTRAS) | (1L << SI) | (1L << SEGUN) | (1L << LIMPIAR) | (1L << BORRAR) | (1L << ESPERAR) | (1L << TOKEN_ID))) != 0)) {
				{
				{
				setState(167);
				comando();
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(173);
			fin_proceso();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
